feat: implement dashboard reporting
